tests/Fixtures/Torture/Bad/return_void_val.g
// EXPECT G010
kernel { entry func Main() { } void func f() { return 5; } }
